1.0.5
* zmiana nazw funkcji w cookie
* utworzenie nowego namespace ui
* przeniesienie loader, glass, message, utils.size do namespace'a ui

1.0.4
* poprawienie nazw parametrów
* poprawienie JSDoc'a
* dodanie usługi pojedynczych testów
* dodanie obsługi timeout'a do pklib.ajax
* dodanie pklib.array.index do wyznaczania liczby porządkowej elementu
* poprawienie usuwania i odnajdywania klasy css w elemencie DOM
* dodanie metody pklib.dom.isElement do sprawdzania czy obiekt jest Elementem
* poprawienie pklib.dom.byId 
* przeniesienie metody pklib.dom.get do listy TODO i oznaczenie jako feature
* optymalizacja metody pklib.dom.center oraz pklib.dom.maximize
* dodanie metody pklib.dom.remove do usuniecia elementu z drzewa DOM
* poprawnie całego obiektu pklib.event
* dodanie metody pklib.event.get do pobrania eventów elementu
* dodanie metody pklib.event.trigger do uruchomienia konkretnego eventu
* poprawienie metody pklib.string.slice
* usuniecie obiektu pklib.validate

1.0.3
* poprawienie licencji
* dodanie walidacji przez JSLint'a ( http://www.jslint.com/ )
* poprawienie komentarzy JSDoc ( http://en.wikipedia.org/wiki/JSDoc )

1.0.2
* dodanie uniwersalnej metody do znajdywania elementów
* dodanie ładownia kilku plików, jeden po drugim wraz z zależnościami
* poprawienie błędów w modułach prezentacyjnych
* refaktoring modułu JSON
* poprawienie Function.prototype.bind
* dodanie funkcji strip_tags
* dodanie modułu URL

1.0.1
* dodanie licencji do źródeł
* rodzielenie najwiekszego modułu na mniejsze
* dodanie kilku modołów

1.0.0
* wysztkie nazwy po angielsku i małymi literami

========================

0.6.1
* przerobienie komentarzy na zgodne z JSDoc

0.6.0
* zmiana skróconej wersji na pełną jQuery

0.5.9
* wielki refaktoring

0.5.8
* dodanie rozszerzeń do jQuery

0.5.7
* dodanie komentarzy do modułów i metod

0.5.6
* dodanie modułów prezentacyjnych

0.5.5
* dodanie wersji spakowanej
* usunięcie sprawdzania argumentów

0.5.1
* dodanie sprawdzania argumentów

0.5.0