@@ -1,0 +1,25 @@
+<html>
+<head>
+    <title>pklib.common :: test suite</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    
+    <link href="../qunit/qunit.css" rel="stylesheet" type="text/css" />
+    <script src="../qunit/qunit.js" type="text/javascript"></script>
+    
+    <script type="text/javascript" src="../../src/header.js"></script>
+    <script type="text/javascript" src="../../src/event.js"></script>
+    <script type="text/javascript" src="../../src/common.js"></script>
+    
+    <script type="text/javascript" src="../src/header.js"></script>
+    <script type="text/javascript" src="../src/common.js"></script>
+</head>
+<body>
+    
+    <h1 id="qunit-header"><a href="#">pklib.common :: test suite</a></h1>
+    <h2 id="qunit-banner"></h2>
+    <div id="qunit-testrunner-toolbar"></div>
+    <h2 id="qunit-userAgent"></h2>
+    <ol id="qunit-tests"></ol>
+    
+</body>
+</html>
